goodstart on the extension bars

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="style.css">
   
-  <title>Frontend Mentor | Browser extensions manager UI</title>
+  <title>In Progress...</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,15 +17,31 @@
   </style>
 </head>
 <body>
+  <section class="extention-bar">
+    <section class="ext-img">
+      <img src="/Websites/FrontendMentor/browser-extensions-manager-ui-main/assets/images/logo.svg">
+    </section>
+    <section class="sun-img">
+      <img src="/Websites/FrontendMentor/browser-extensions-manager-ui-main/assets/images/icon-sun.svg">
+    </section>
+  </section>
 
-  Extensions List
-
+  <section class="extensions-list">
+    <section class="header-extension">
+      <h1>Extensions List</h1>
+    </section>
+    <section class="extension-filters">
+      <button>All</button>
+      <button>Active</button>
+      <button>Inactive</button>
+    </section>
+  </section>
   All
   Active
   Inactive
 
   <!-- If you plan to use the JSON file to populate the data dynamically, you can delete the content below -->
-
+  
   DevLens
   Quickly inspect page layouts and visualize element boundaries.
   Remove
