--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body>
   <section class="extention-bar">
     <section class="ext-img">
-      <img src="assets/images/logo.svg">
+      <img src="../assets/images/logo.svg">
     </section>
     <section class="sun-img">
-      <img src="assets/images/icon-sun.svg">
+      <img src="../assets/images/icon-sun.svg">
     </section>
   </section>
 
