--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body>
   <section class="extention-bar">
     <section class="ext-img">
-      <img src="../assets/images/logo.svg">
+      <img src="logo.svg">
     </section>
     <section class="sun-img">
-      <img src="../assets/images/icon-sun.svg">
+      <img src="icon-sun.svg">
     </section>
   </section>
 
@@ -36,10 +36,6 @@
       <button>Inactive</button>
     </section>
   </section>
-  All
-  Active
-  Inactive
-
   <!-- If you plan to use the JSON file to populate the data dynamically, you can delete the content below -->
   
   DevLens
