--- a/index.html
+++ b/index.html
@@ -38,6 +38,48 @@
   </section>
   <!-- If you plan to use the JSON file to populate the data dynamically, you can delete the content below -->
   
+  <section class="extension-cards">
+      <section class="extension">
+        a
+      </section>
+      <section class="extension">
+        b
+      </section>
+      <section class="extension">
+        c
+      </section>
+      <section class="extension">
+        d
+      </section>
+      <section class="extension">
+        e
+      </section>
+      <section class="extension">
+        f
+      </section>
+      <section class="extension">
+        g
+      </section>
+      <section class="extension">
+        h
+      </section>
+      <section class="extension">
+        i
+      </section>
+      <section class="extension">
+        j
+      </section>
+      <section class="extension">
+        k
+      </section>
+      <section class="extension">
+        l
+      </section>
+      <section class="extension">
+        m
+      </section>
+    </section>
+  </section>
   DevLens
   Quickly inspect page layouts and visualize element boundaries.
   Remove
@@ -85,10 +127,5 @@
   ConsolePlus
   Enhanced developer console with advanced filtering and logging.
   Remove
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
