--- a/index.html
+++ b/index.html
@@ -10,122 +10,27 @@
   
   <title>In Progress...</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+
   </style>
 </head>
-<body>
-  <section class="extention-bar">
-    <section class="ext-img">
-      <img src="./assets/images/logo.svg">
-    </section>
-    <section class="sun-img">
-      <img src="./assets/images/icon-sun.svg">
-    </section>
-  </section>
-
-  <section class="extensions-list">
-    <section class="header-extension">
-      <h1>Extensions List</h1>
-    </section>
-    <section class="extension-filters">
-      <button>All</button>
-      <button>Active</button>
-      <button>Inactive</button>
-    </section>
-  </section>
-  <!-- If you plan to use the JSON file to populate the data dynamically, you can delete the content below -->
-  
-  <section class="extension-cards">
-      <section class="extension">
-        a
-      </section>
-      <section class="extension">
-        b
-      </section>
-      <section class="extension">
-        c
-      </section>
-      <section class="extension">
-        d
-      </section>
-      <section class="extension">
-        e
-      </section>
-      <section class="extension">
-        f
-      </section>
-      <section class="extension">
-        g
-      </section>
-      <section class="extension">
-        h
-      </section>
-      <section class="extension">
-        i
-      </section>
-      <section class="extension">
-        j
-      </section>
-      <section class="extension">
-        k
-      </section>
-      <section class="extension">
-        l
-      </section>
-      <section class="extension">
-        m
-      </section>
-    </section>
-  </section>
-  DevLens
-  Quickly inspect page layouts and visualize element boundaries.
-  Remove
-
-  StyleSpy
-  Instantly analyze and copy CSS from any webpage element.
-  Remove
-
-  SpeedBoost
-  Optimizes browser resource usage to accelerate page loading.
-  Remove
-
-  JSONWizard
-  Formats, validates, and prettifies JSON responses in-browser.
-  Remove
-
-  TabMaster Pro
-  Organizes browser tabs into groups and sessions.
-  Remove
-
-  ViewportBuddy
-  Simulates various screen resolutions directly within the browser.
-  Remove
-
-  Markup Notes
-  Enables annotation and notes directly onto webpages for collaborative debugging.
-  Remove
-
-  GridGuides
-  Overlay customizable grids and alignment guides on any webpage.
-  Remove
-
-  Palette Picker
-  Instantly extracts color palettes from any webpage.
-  Remove
-
-  LinkChecker
-  Scans and highlights broken links on any page.
-  Remove
-
-  DOM Snapshot
-  Capture and export DOM structures quickly.
-  Remove
-
-  ConsolePlus
-  Enhanced developer console with advanced filtering and logging.
-  Remove
+<body> 
+  <div class="header">
+    <div class="img">
+      <img id="logo" src="./assets/images/logo.svg" alt="website logo">
+    </div>
+    <div class="theme">
+      <div id="theme">
+        <button id="theme-button"><img src="./assets/images/icon-sun.svg" alt="theme button"></a></button>
+      </div>
+    </div>
+  </div>
+  <div class="extension-bar">
+    <h1>Extensions List</h1>
+    <div class="filters">
+      <button id="all">All</button>
+      <button id="active">Active</button>
+      <button id="inactive">Inactive</button>
+    </div>
+  </div>
 </body>
 </html>
