--- a/index.html
+++ b/index.html
@@ -32,5 +32,23 @@
       <button id="inactive">Inactive</button>
     </div>
   </div>
+  <div class="card">
+    <div class="icon">
+      <img src="./assets/images/logo-devlens.svg" alt="icon">
+    </div>
+    <div class="description">
+      <div class="icon-description">
+        <h2>DevLens</h2>
+        <p>Quickly inspect page laylouts and visualize element boundaries</p>
+      </div>
+      <div class="inputs">
+        <button id="remove">Remove</button>
+        <input id="toggle" type="checkbox">
+      </div>
+    </div>
+    <div class="input">
+
+    </div>
+  </div>
 </body>
 </html>
