--- a/index.html
+++ b/index.html
@@ -34,20 +34,18 @@
   </div>
   <div class="card">
     <div class="icon">
-      <img src="./assets/images/logo-devlens.svg" alt="icon">
-    </div>
-    <div class="description">
+      <img id="icon" src="./assets/images/logo-devlens.svg" alt="icon">
       <div class="icon-description">
         <h2>DevLens</h2>
         <p>Quickly inspect page laylouts and visualize element boundaries</p>
       </div>
-      <div class="inputs">
-        <button id="remove">Remove</button>
-        <input id="toggle" type="checkbox">
-      </div>
     </div>
-    <div class="input">
-
+    <div class="inputs">
+        <button id="remove">Remove</button>
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider round"></span>
+        </label>
     </div>
   </div>
 </body>
