--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
     </div>
   </div>
   <div class="card">
-    <div class="icon">
-      <img id="icon" src="./assets/images/logo-devlens.svg" alt="icon">
+    <div class="card-details">
+      <div class="icon">
+        <img id="icon" src="./assets/images/logo-devlens.svg" alt="icon">
+      </div>
       <div class="icon-description">
         <h2>DevLens</h2>
         <p>Quickly inspect page laylouts and visualize element boundaries</p>
