--- a/index.html
+++ b/index.html
@@ -32,23 +32,26 @@
       <button id="inactive">Inactive</button>
     </div>
   </div>
-  <div class="card">
-    <div class="card-details">
-      <div class="icon">
-        <img id="icon" src="./assets/images/logo-devlens.svg" alt="icon">
+  <div class="grid">
+    <div class="card">
+      <div class="card-details">
+        <div class="icon">
+          <img id="icon" src="./assets/images/logo-devlens.svg" alt="icon">
+        </div>
+        <div class="icon-description">
+          <h2>DevLens</h2>
+          <p>Quickly inspect page laylouts and visualize element boundaries</p>
+        </div>
       </div>
-      <div class="icon-description">
-        <h2>DevLens</h2>
-        <p>Quickly inspect page laylouts and visualize element boundaries</p>
+      <div class="inputs">
+          <button id="remove">Remove</button>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
       </div>
-    </div>
-    <div class="inputs">
-        <button id="remove">Remove</button>
-        <label class="switch">
-          <input type="checkbox">
-          <span class="slider round"></span>
-        </label>
     </div>
   </div>
+  <script src="main.js"></script>
 </body>
 </html>
