--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="style.css">
   
-  <title>In Progress...</title>
+  <title>Extension Manager | Frontend Mentor</title>
 
 
   </style>
